<resources>
    <string name="app_name">TicTakToe</string>
    <string name="heading">Welcome to Tik-Tak-Toe</string>
    <string name="grid">Our main grid</string>
    <string name="status">X\'s turn- tap to play</string>
    <string name="thank_you_for_playing">Thank You for Playing:)</string>
    <string name="for_playing">for Playing</string>
    <string name="thank_you">Thank you</string>
    <string name="bhavin_vaghela">-: Bhavin Vaghela</string>
    <string name="tik_tak_toe_now_let_s_play_the_fun">........Tik-Tak-Toe........ NOW Let\'s Play the Fun !</string>
    <string name="tap_to_play">Tap to Play</string>
    <string name="restart">Restart</string>
</resources>
