<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F44336"
    tools:context=".goodbye">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="205dp"
        android:layout_height="73dp"
        android:layout_marginStart="112dp"
        android:background="#0F8BC34A"
        android:fontFamily="cursive"
        android:text="@string/for_playing"
        android:textColor="#FFEB3B"
        android:textColorLink="#FFFFFF"
        android:textSize="40sp"
        android:textStyle="bold|italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="179dp"
        android:layout_height="58dp"
        android:layout_marginStart="136dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="216dp"
        android:background="#0F8BC34A"
        android:fontFamily="cursive"
        android:text="@string/thank_you"
        android:textColor="#FFEB3B"
        android:textColorLink="#FFFFFF"
        android:textSize="40sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.635"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="255dp"
        android:layout_height="297dp"
        android:layout_marginBottom="80dp"
        android:contentDescription="@string/thank_you"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/smily" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="197dp"
        android:layout_height="45dp"
        android:layout_marginStart="232dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="71dp"
        android:layout_marginBottom="388dp"
        android:text="@string/bhavin_vaghela"
        android:textColor="#FFEB3B"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.977"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="40dp"
        android:layout_height="36dp"
        android:layout_marginStart="328dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="#FFEB3B"
        android:contentDescription="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_lock_power_off"
        tools:srcCompat="@android:drawable/ic_lock_power_off" />
</androidx.constraintlayout.widget.ConstraintLayout>